# wctp

./: .gitignore  .ltex-ls-plus.json  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix  lychee.toml  netlify.toml  rust-toolchain.toml
.githooks/: pre-commit
.githooks/lib-commit-msg/: placeholder
.githooks/lib-pre-commit/: build-site-if  links  spellcheck
.github/workflows/: cargo-check.yml  cargo-test.yml  labels.yml  nix-command.yml  pre-commit-formatting.yml
engine/: Cargo.toml
engine/src/: cascade.rs  chunk.rs  chunk_manager.rs  cpu.rs  lib.rs  mesh_generator.rs  shaders.rs
engine/src/pipeline/: proc.rs
engine/src/pipeline/proc/stages/: mesh.rs
engine/src/shaders/: custom_material.rs  leaf_material.rs  outline.rs
playgrounds/gpu-sdf/: Cargo.toml
playgrounds/gpu-sdf/assets/wgsl/: classify.wgsl
playgrounds/gpu-sdf/src/sdf/: combinators.rs  perlin_terrain.rs  trapezoidal_prism.rs
playgrounds/objects/: Cargo.toml
playgrounds/objects/assets/proc/: block_prefix.wgsl  block_sum.wgsl  classify_voxels.wgsl  prefix_scan_local.wgsl
playgrounds/objects/assets/shaders/: checkerboard_material.wgsl  leaf_material.wgsl
playgrounds/objects/src/: buildings.rs  buildings_playground.rs  camera.rs  checkerboard_material.rs  ground.rs  lib.rs  main.rs  tree.rs  ui.rs
playgrounds/terrain/: Cargo.toml
playgrounds/terrain/assets/proc/: compute_mesh.wgsl  marching_cubes.wgsl  perlin_terrain.wgsl
playgrounds/terrain/assets/shaders/: custom_material.wgsl  edge_material.wgsl
playgrounds/terrain/src/: camera.rs  cascade.rs  chunk.rs  chunk_manager.rs  cpu.rs  cpu_marching_cubes.rs  forest.rs  geography.rs  gpu.rs  lib.rs  main.rs  marching_cubes.rs  mesh_generator.rs  sdf.rs  terrain.rs  ui.rs  units.rs
playgrounds/terrain/src/assets/proc/: block_prefix.wgsl  block_sum.wgsl  classify.wgsl  classify_voxels.wgsl  compute_mesh.wgsl  marching_cubes.wgsl  prefix_scan_local.wgsl
playgrounds/terrain/src/geography/: canyons.rs
playgrounds/terrain/src/pipeline/: proc.rs
playgrounds/terrain/src/pipeline/proc/: bind_groups.rs  buffers.rs  pipelines.rs  pipelines_resource.rs  render_setup.rs  stages.rs  types.rs
playgrounds/terrain/src/pipeline/proc/stages/: classify.rs  mesh.rs  prefix_add.rs  prefix_block.rs  prefix_local.rs
playgrounds/terrain/src/sdf/: combinators.rs  inscribed_polygon.rs  perlin_terrain.rs  region.rs  region_extrusion.rs  region_modulation.rs  tetradhedron.rs  tube.rs
playgrounds/terrain/src/sdf/analysis/: interval.rs
playgrounds/terrain/src/sdf/analysis/interval/: combinators.rs  sign.rs  sign_boundary.rs  sign_uniform_intervals.rs
playgrounds/terrain/src/sdf/analysis/interval/combinators/: difference.rs  union.rs
playgrounds/terrain/src/sdf/analysis/interval/combinators/difference/: boundary.rs
playgrounds/terrain/src/sdf/analysis/interval/combinators/intersection/: boundary.rs
playgrounds/terrain/src/sdf/analysis/interval/combinators/union/: boundary.rs
playgrounds/terrain/src/sdf/analysis/interval/sign_uniform_intervals/: interval.rs  intervals.rs  pre_intervals.rs
playgrounds/terrain/src/sdf/analysis/interval/sign_uniform_intervals/interval/: combinators.rs
playgrounds/terrain/src/sdf/analysis/interval/sign_uniform_intervals/interval/combinators/: difference.rs  union.rs
playgrounds/terrain/src/sdf/analysis/interval/sign_uniform_intervals/intervals/: boundary_mapping.rs  interval_interator.rs  interval_mapping.rs
playgrounds/terrain/src/sdf/analysis/interval/sign_uniform_intervals/intervals/interval_mapping/: combinators.rs
playgrounds/terrain/src/sdf/region/: affine.rs  branching.rs  grading.rs  rounding.rs
playgrounds/terrain/src/sdf/region_modulation/: affine.rs  extrusion.rs
playgrounds/terrain/src/shaders/: custom_material.rs  outline.rs
procedures/buildings/: Cargo.toml
procedures/buildings/src/: complex.rs  lib.rs  meshes.rs
procedures/buildings/src/complex/: fillers.rs  render.rs
procedures/buildings/src/complex/fillers/: scratchpad.rs
procedures/buildings/src/meshes/: floors.rs  walls.rs
procedures/buildings/src/meshes/walls/: wall.rs
procedures/comproc/: Cargo.toml
procedures/comproc/src/: complex.rs  geometry.rs  lib.rs
procedures/comproc/src/complex/: chain.rs  connected.rs
procedures/comproc/src/complex/chain/: ball_stick.rs
procedures/comproc/src/complex/connected/: cell_complex.rs
procedures/comproc/src/geometry/: internally_noisy.rs  noisy.rs  polygonal.rs  spherical.rs
procedures/comproc/src/geometry/polygonal/: unit_cube.rs
procedures/comproc/src/geometry/spherical/: ball.rs  plane_ball.rs  unit_ball.rs  (+2 more)
procedures/comproc/src/noise/: config.rs
procedures/terrain/: Cargo.toml
procedures/terrain/src/: lib.rs  region.rs
procedures/terrain/src/region/: affine.rs  branching.rs  grading.rs  rounding.rs
procedures/vegetation/: Cargo.toml
procedures/vegetation/src/: forest.rs  grove.rs  lib.rs  tree.rs
procedures/vegetation/src/tree/: builder.rs  canopy.rs  meshes.rs  stalk.rs
procedures/vegetation/src/tree/meshes/: canopy.rs
procedures/vegetation/src/tree/meshes/canopy/: ball.rs  branch.rs
procedures/vegetation/src/tree/meshes/canopy/ball/: scratchpad.rs
procedures/vegetation/src/tree/meshes/trunk/: segment.rs
procedures/vegetation/src/tree/stalk/: branches.rs  roots.rs  trunk.rs
procedures/vegetation/src/tree/stalk/trunk/: segment.rs
procedures/vegetation/src/tree/stalk/trunk/segment/: join_point.rs  mod.rs  radial_branches.rs  simple.rs  trunk_split.rs
util/chunk/: Cargo.toml
util/chunk/src/: cascade.rs  lib.rs
util/render-item/: Cargo.toml
util/render-item/src/: cache.rs  lib.rs  mesh.rs  sdf.rs
util/render-item/src/cache/: handle_cache.rs
util/render-item/src/mesh/: cache.rs  handle.rs
util/render-item/src/sdf/: cpu_shot.rs
util/sdf/: Cargo.toml
util/sdf/src/: analysis.rs  capsule.rs  combinators.rs  ellipsoid.rs  lib.rs  perlin_terrain.rs  sphere.rs  tetradhedron.rs  trapezoidal_prism.rs  tube.rs
util/sdf/src/analysis/: bounds.rs  interval.rs
util/sdf/src/region/: affine.rs  grading.rs  rounding.rs
(+16 files in other folders)
